--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "Anastasia Surkova",
   "license": "ISC",
   "type": "module",
-  "devDependencies": {
-    "prettier": "^3.2.4"
-  },
   "dependencies": {
     "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1"
   }
 }
